# universal-chat

./: Cargo.toml  README.md  rustfmt.toml
src/: config.rs  lib.rs  logger.rs
src/core/: core.rs  mod.rs  types.rs
src/modules/: mod.rs
src/sources/: discord.rs  discord_source.rs  error.rs  irc.rs  irc_source.rs  mod.rs  slack.rs  slack_source.rs  stdin.rs
src/sources/discord_source/: event_handler.rs  mod.rs
