[package]
name = "universal-chat"
version = "0.1.0"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
lazy_static = "1.4"
timer = "0.2"
irc = { version = "0.13", optional = true }
slack = { git = "https://github.com/fizyk20/slack-rs.git", branch = "less-blocking-reads", optional = true }
serenity = { version = "0.8", optional = true }

[features]
discord = ["serenity"]
